[package]
name = "Oxidyn"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/providers/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
toml = "0.8.10"
serde = { version = "1.0.196", features = ["derive"] }
walkdir = "2.4.0"